syntax = "proto3";

package visualhoop_compiler;

import "google/protobuf/empty.proto";

// âœ… Final best practice go_package: gunakan style GitHub (flat output)
option go_package = "github.com/milkyhoop/milkyhoop/backend/services/visualhoop-compiler/internal/proto;proto";

// Service untuk Visualhoop Compiler
service VisualhoopCompiler {
  rpc CompileJsonToPb (CompileRequest) returns (CompileResponse);
  rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
}

// Request dan Response
message CompileRequest {
  string json_path = 1;
  string output_path = 2;
}

message CompileResponse {
  string message = 1;
}

// Struktur Flow
message Flow {
  repeated string intent = 1;
  Entities entities = 2;
}

message Entities {
  Customer customer = 1;
  OrderTransaction order_transaction = 2;
  ProductServiceIssue product_service_issue = 3;
}

message Customer {
  string customer_name = 1;
  string location = 2;
}

message OrderTransaction {
  string order_id = 1;
  repeated string item_name = 2;
  repeated int32 quantity = 3;
}

message ProductServiceIssue {
  string reason = 1;
}
